# niceforms

./: README.md  __init__.py  pyproject.toml  x.py
docs/: __init__.py
examples/: __init__.py  _layout.py  auto_save.py  basic.py  basic_usage.py  complex_type.py  custom_field_widget.py  custom_type_widget.py  fill_form.py  list_model.py  main.py  many_forms.py  nested.py  pydantic_error_catching.py  select_widget.py
examples/cases/: as_dialog.py  auto_save.py  basic.py  complex_type.py  custom_field_widget.py  custom_placeholder_getter.py  custom_type_widget.py  disable_widget.py  fill_form.py  list_model.py  many_forms.py  nested.py  pydantic_error_catching.py  readonly.py  select_widget.py  slim.py  widget_visibility.py
niceforms/: __init__.py  actions.py  constants.py  exceptions.py  form.py  utils.py  widget_factory.py
niceforms/i18n/: __init__.py  translator.py
niceforms/i18n/locales/: ru.json
niceforms/ui/: __init__.py  body.py  button.py  footer.py  form.py  header.py  json_viewer.py  render_widget_variant.py  ui_component.py
niceforms/widget/: __init__.py  bool.py  datetime.py  enum.py  float.py  integer.py  iterable.py  list.py  list_basemodel.py  nested.py  select.py  string.py  unknown_type.py
niceforms/widget/list_basemodel/: __init__.py  action.py  component.py  dialog.py  enums.py  widget.py
tests/: __init__.py  test_extract_custom_fields.py  test_extract_inner_type.py  test_form.py  test_is_enum_type.py  test_is_list_basemodel_type.py  test_normalize_type.py
ui/: __init__.py  body.py  components.py  header.py  themes.py
utils/: __init__.py  constants.py  helpers.py  metadata_extractor.py
widgets/: __init__.py  factory.py  impl.py
