[project]
name = "niceforms"
version = "2.3.1"
description = "A dynamic form generator for NiceGUI that automatically creates interactive UI forms from Pydantic models"
authors = [
    {name = "pasha_danilevich", email = "danilevitch.pasha@yandex.ru"}
]
readme = "README.md"

packages = [
    {include = "niceforms"}
]

[tool.poetry.dependencies]
python = ">=3.10, <4"
pydantic = "^2.10.0"
nicegui = "^3.3.0"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "gitprompter (>=0.2.0,<0.3.0)"
]

[tool.black]
line-length = 88
skip-string-normalization = true
preview = true


[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true